<resources>
    <string name="app_name">Chat SimpApp</string>

    <!-- Splash View -->
    <string name="splash_by">by</string>
    <string name="splash_name_creator">Jonathan Javier Ramirez</string>

    <!-- Login View -->
    <string name="login_username">Username</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_confirm_password">Confirm Password</string>
    <string name="login_sign_in">Sign In</string>
    <string name="login_signUp">Sign Up</string>
    <string name="login_reset_password">Reset Password</string>
    <string name="login_signIn_google">Sign In with Google</string>
    <string name="login_forgot_password">I have fotgotten my password</string>
    <string name="login_create_account">Sign up here</string>
    <string name="login_go_to_login">Go back to Login</string>
    <string name="login_option">or</string>

    <string name="login_enter_app">ENTER THE APP</string>
    <string name="login_no_account">You do not have an account?</string>

    <!-- Register -->
    <string name="register_send_email">An email has been sent to you. Confirm before logging in</string>
    <string name="register_error_create">Unexpected error occurred. Please try again</string>
    <string name="register_user_saved">User successfully saved</string>
    <string name="register_user_saved_error">Unexpected Error</string>
    <string name="register_form">To start fill out the form</string>
    <string name="register_app">REGISTER IN THE APP</string>

    <!-- Sign In and Sign Up -->
    <string name="username_is_no_valid">Username is not valid</string>
    <string name="email_is_no_valid">Email is not valid</string>
    <string name="password_is_no_valid">Password should contain 1 lowercase, 1 uppercase,  1 special character and 8 characters length at least.</string>
    <string name="confirm_password_is_no_valid">Confirm Password does not match with Password</string>

    <string name="chat_edittext_message_hint">Type here a message…</string>

    <!-- Bottom Navigation Menu -->
    <string name="navigation_bottom_info">Info</string>
    <string name="navigation_bottom_rates">Rates</string>
    <string name="navigation_bottom_chat">Chat</string>

    <!-- ProfileFragment -->
    <string name="phone_number_profile">Phone Number</string>
    <string name="registration_date">Registration Date</string>
    <string name="username_profile">Username</string>
    <string name="email_profile">Email</string>
    <string name="info_no_name">Name is not available</string>
    <string name="options_menu_log_out">Log out</string>

    <string name="user_message">User Message</string>
    <string name="username_rooms">Username</string>

    <!-- AlertDialog-->
    <string name="alert_dialog_title">Rate the App!</string>
    <string name="alert_dialog_title_wait">Wait a moment, please…</string>
    <string name="alert_dialog_edit_text_hint">Leave your feedback</string>
    <string name="alert_dialog_ok">Rate</string>
    <string name="alert_dialog_cancel">Cancel</string>

    <!-- Facebook Sign In -->
    <string name="facebook_app_id">1313125555774064</string>
    <string name="fb_login_protocol_scheme">fb1313125555774064</string>

    <!-- CompleteInfoFragment -->
    <string name="search">Search…</string>
    <string name="username">Username</string>
    <string name="phone_number">Phone Number</string>
    <string name="complete">Complete</string>
    <string name="choose">Choose an option</string>
    <string name="gallery_image">Gallery image</string>
    <string name="camera_photo">Take photo</string>
    <string name="complete_info">COMPLETE YOUR INFORMATION</string>
    <string name="phone_number_is_no_valid">Enter 10 digits without special character</string>

    <!-- Chat -->
    <string name="online">Online</string>
    <string name="time_ago">A while ago</string>
    <string name="offline">Offline</string>
    <string name="offline_title">Connect to a network</string>
    <string name="offline_message">To use LoginFuturo, activate cell phone data or connect to a wifi network.</string>
    <string name="offline_button">OK</string>
    <string name="writing">Writing…</string>

    <!-- Notification -->
    <string name="new_message">NEW MESSAGE</string>
    <string name="your_message">Your Message…</string>
    <string name="reply_message">Reply</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>

    <!-- Google Admob -->
    <string name="test_application_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="test_banner">ca-app-pub-3940256099942544/6300978111</string>
    <string name="test_interstitial">ca-app-pub-3940256099942544/1033173712</string>
    <string name="test_interstitial_video">ca-app-pub-3940256099942544/8691691433</string>
    <string name="test_native_advanced">ca-app-pub-3940256099942544/2247696110</string>
    <string name="test_native_advanced_video">ca-app-pub-3940256099942544/1044960115</string>

    <string name="application_id">ca-app-pub-2631068461383213~1013661868</string>
    <string name="banner_register">ca-app-pub-2631068461383213/6230329527</string>
    <string name="interstitial_rooms">ca-app-pub-2631068461383213/5267729509</string>
    <string name="interstitial_rates">ca-app-pub-2631068461383213/4135267778</string>
    <string name="native_advanced">ca-app-pub-2631068461383213/7627967834</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>