<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/bottom_nav_info"
        android:enabled="true"
        android:icon="@drawable/ic_info"
        android:title="@string/navigation_bottom_info"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/bottom_nav_rates"
        android:enabled="true"
        android:icon="@drawable/ic_rates"
        android:title="@string/navigation_bottom_rates"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/bottom_nav_chat"
        android:enabled="true"
        android:icon="@drawable/ic_chat"
        android:title="@string/navigation_bottom_chat"
        app:showAsAction="ifRoom" />
</menu>