<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layer_login"
    android:fillViewport="true"
    tools:context=".ui.view.fragments.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linearLayoutLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/login_standard_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageViewLogo"
                android:layout_width="@dimen/login_image_width_and_height"
                android:layout_height="@dimen/login_image_width_and_height"
                android:src="@drawable/ic_chat_simpapp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/text_color"
                android:textSize="@dimen/login_text_size_chatsimpapp"
                android:textStyle="italic" />

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:layout_marginLeft="@dimen/login_card_view_margin"
            android:layout_marginTop="@dimen/login_standard_size"
            android:layout_marginRight="@dimen/login_card_view_margin"
            android:layout_marginBottom="@dimen/login_card_view_margin"
            app:cardBackgroundColor="@color/primary_light"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutLogin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/login_textview_padding_top"
                    android:text="@string/login_enter_app"
                    android:textAlignment="center"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/login_text_size_card_view" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/login_card_view_margin_left_and_right"
                    android:layout_marginTop="@dimen/login_margin_top"
                    android:layout_marginRight="@dimen/login_card_view_margin_left_and_right"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/login_card_view_imageview_width_and_height"
                        android:layout_height="@dimen/login_card_view_imageview_width_and_height"
                        android:layout_marginTop="@dimen/login_margin_top"
                        android:layout_marginEnd="@dimen/login_card_view_margin_end_and_top"
                        android:src="@drawable/ic_email" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edittext_rounded">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/materialTextInputEditTextEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/edittext_rounded"
                            android:hint="@string/login_email"
                            android:inputType="textEmailAddress"
                            android:padding="@dimen/login_standard_size" />

                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/login_card_view_margin_left_and_right"
                    android:layout_marginTop="@dimen/login_card_view_margin_end_and_top"
                    android:layout_marginRight="@dimen/login_card_view_margin_left_and_right"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/login_card_view_imageview_width_and_height"
                        android:layout_height="@dimen/login_card_view_imageview_width_and_height"
                        android:layout_marginTop="@dimen/login_margin_top"
                        android:layout_marginEnd="@dimen/login_card_view_margin_end_and_top"
                        android:src="@drawable/ic_password" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/materialTextInputLayoutPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edittext_rounded"
                        app:passwordToggleEnabled="false">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/materialTextInputEditTextPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/edittext_rounded"
                            android:hint="@string/login_password"
                            android:inputType="textPassword"
                            android:maxLength="15"
                            android:padding="@dimen/login_standard_size" />

                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/buttonLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/login_card_view_margin_left_and_right"
                    android:layout_marginTop="@dimen/login_margin_top"
                    android:layout_marginRight="@dimen/login_card_view_margin_left_and_right"
                    android:background="@drawable/rounded_button"
                    android:text="@string/login_sign_in"
                    android:textColor="@color/text_color" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/login_card_view_margin_left_and_right"
                    android:layout_marginTop="@dimen/login_margin_top"
                    android:layout_marginRight="@dimen/login_card_view_margin_left_and_right"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="@dimen/login_view_width"
                        android:layout_height="@dimen/login_view_height"
                        android:background="@color/secondary_dark" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/login_standard_size"
                        android:layout_marginRight="@dimen/login_standard_size"
                        android:text="@string/login_option"
                        android:layout_gravity="center"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/login_text_size_standard"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="@dimen/login_view_width"
                        android:layout_height="@dimen/login_view_height"
                        android:background="@color/secondary_dark" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/login_card_view_margin_left_and_right"
                    android:layout_marginTop="@dimen/login_margin_top"
                    android:layout_marginRight="@dimen/login_card_view_margin_left_and_right"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/buttonLoginGoogle"
                        android:layout_width="@dimen/login_logo_width_and_height"
                        android:layout_height="@dimen/login_logo_width_and_height"
                        android:background="@drawable/ic_google" />

                    <Button
                        android:id="@+id/buttonLogInFacebook"
                        android:layout_width="@dimen/login_logo_width_and_height"
                        android:layout_height="@dimen/login_logo_width_and_height"
                        android:enabled="false"
                        android:background="@drawable/ic_facebook" />

                </LinearLayout>

                <TextView
                    android:id="@+id/textViewForgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/login_margin_top"
                    android:text="@string/login_forgot_password"
                    android:paddingBottom="@dimen/login_standard_size_bottom"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/login_text_size_standard" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="@dimen/login_standard_size_bottom"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_no_account"
                android:textSize="@dimen/login_text_size_card_view" />

            <TextView
                android:id="@+id/textViewRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/login_create_account"
                android:textColor="@color/text_color"
                android:textSize="@dimen/login_text_size_standard"
                android:textStyle="bold" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>