<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ripple_app"
    android:fillViewport="true"
    tools:context=".ui.view.activities.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.ads.nativetemplates.TemplateView
            android:id="@+id/templateForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:gnt_template_type="@layout/gnt_medium_template_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/register_margin_start_and_end"
            android:layout_marginTop="@dimen/forgot_margin_top"
            android:layout_marginEnd="@dimen/register_margin_start_and_end"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/templateForgotPassword">

            <ImageView
                android:layout_width="@dimen/login_card_view_imageview_width_and_height"
                android:layout_height="@dimen/login_card_view_imageview_width_and_height"
                android:layout_marginTop="@dimen/login_margin_top"
                android:layout_marginEnd="@dimen/login_card_view_margin_end_and_top"
                android:src="@drawable/ic_email" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_rounded">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/materialTextInputEditTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_rounded"
                    android:hint="@string/login_email"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/login_standard_size" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <Button
            android:id="@+id/buttonForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/register_margin_start_and_end"
            android:layout_marginEnd="@dimen/register_margin_start_and_end"
            android:layout_marginBottom="@dimen/forgot_margin_bottom"
            android:background="@drawable/rounded_button"
            android:text="@string/login_reset_password"
            android:textColor="@color/text_color"
            android:textSize="@dimen/login_text_xl_size"
            app:layout_constraintBottom_toTopOf="@+id/buttonGoLogInForgot"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="@dimen/forgot_vertical_bias" />

        <Button
            android:id="@+id/buttonGoLogInForgot"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login__button_xl_height"
            android:background="@color/primary_dark"
            android:text="@string/login_go_to_login"
            android:textColor="@color/text_color"
            android:textSize="@dimen/login_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>